--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     </head>
 <body>
     <img src="austincrognale.gif" alt="austincrognale" class="center"/>
-    <a href="https://github.com/austincrognalecst2023" alt="github" class="f1"><img src="cst.png" alt="cst" class="f1"/></a>
+    <a href="https://github.com/owztn" alt="github" class="f1"><img src="cst.png" alt="cst" class="f1"/></a>
 </body>
 </html>
